<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_noti"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!--    Username-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/resultUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_result_label"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/resultPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_result_label"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    Birthday-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/resultBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_result_label"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    Gender-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/resultGender"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_result_label"
            android:textSize="20sp" />

    </LinearLayout>

    <!--    Hobbies-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/resultHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies_result_label"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>